sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:7: error: ')' expected but ',' found.
			if (i+1,i) {
                               ^AlgCocktailSort1:12: error: ')' expected but 'for' found.
		for (j <- getNombreValeurs()-2 to 0 by -1 {
                ^AlgCocktailSort1:13: error: ')' expected but ',' found.
			if (j+1,j) {
                               ^AlgCocktailSort1:17: error: illegal start of simple expression
		}
                ^AlgCocktailSort1:18: error: ')' expected but '}' found.
	}
        ^