sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
	var swapped: Boolean = true
	while (swapped) {
		swapped = false
		for (i <- 0 to getNombreValeurs()-2 {
			if (i+1,i) {
				echange(i,i+1)
				swapped = true
			}
		}
		for (j <- getNombreValeurs()-2 to 0 by -1 {
			if (j+1,j) {
				echange(j,j+1)
				swapped = true
			}
		}
	}
}
/*Faire
  Pour tout i dans [0,lgr-2], faire:
    si i et i+1 doivent être échangées, le faire
  Pour tout i dans [lgr-2,0] en descendant, faire:
    si i et i+1 doivent être échangées, le faire
tant qu'au moins l'un des parcours a inversé un élément*/